--- a/EAL.config
+++ b/EAL.config
@@ -10,8 +10,8 @@ YARA_MAXSIZE="10MB"
 ## Path to check yara rules (default is "/")
 YARA_PATHSCAN="/"
 ## Yar rules to check on FS
-YARA_RULES_MEM="/tmp/toolsEAL/tools/procscan.yar"
+YARA_RULES_MEM="procscan.yar"
 ## Yar rules to check on MEM
-YARA_RULES_FS="/tmp/toolsEAL/tools/filescan.yar"
+YARA_RULES_FS="filescan.yar"
 ## Max size of file to extract found by yara rules, suspect proc, package integrity fail, ... (in MB)
 EXTRACT_MAXSIZE=5
