--- a/EAL.config
+++ b/EAL.config
@@ -17,6 +17,8 @@ YARA_RULES_MEM="procscan.yar"
 YARA_RULES_FS="filescan.yar"
 ## Max size of file to extract found by yara rules, suspect proc, package integrity fail, ... (in MB)
 EXTRACT_MAXSIZE=5
+## Extract PHP
+EXTRACT_PHP=1
 ## Get info type (file cmd) on FS (file < 5MB) (1=yes|0=no - default yes)
 FILE_TYPE=1
 ## Get info md5sum on FS (file < 5MB) (1=yes|0=no - default no)
